fix: use vertical-align instead inline-flex in buttons with icon

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -21,11 +21,11 @@
         cursor: default;
     }
     &.with-icon {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        gap: 8px;
         padding-left: 19px;
+        .md3-icon {
+            vertical-align: middle;
+            margin: -3px 8px 0 0;
+        }
     }
     &.outlined {
         border: 2px solid var(--primaryColor);
